--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset=UTF-8>
-        <title>iDraw</title>
-        <script>
-            var ws = new WebSocket("ws://localhost:8080/TomcatWebSocket/wschat/WsChatServlet");
-            ws.onopen = function(){
-            };
-            ws.onmessage = function(message){
-                document.getElementById("chatlog").textContent += message.data + "\n";
-            };
-            function postToServer(){
-                ws.send(document.getElementById("msg").value);
-                document.getElementById("msg").value = "";
-            }
-            function closeConnect(){
-                ws.close();
-            }
-        </script>
+        <title>WebSocketテスト</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script type="text/javascript">
+            var socket;
+            $(document).ready(function(){
+                var host="ws://localhost:8080/idraw/endpoint";
+                socket = new WebSocket(host);
+                
+                socket.onmessage = function(message){
+                    $('#log').append(message.data + "<br/>");
+                }
+
+                $('#send').click(function(){
+                    var text = $('#msg').val();
+                    socket.send(text);
+                    $('#msg').val('');
+                })
+    
+            });
+        </script>        
     </head>
     <body>
-        <textarea id="chatlog" readonly></textarea><br/>
-        <input id="msg" type="text" />
-        <button type="submit" id="sendButton" onClick="postToServer()">Send!</button>
-        <button type="submit" id="sendButton" onClick="closeConnect()">End</button>
+        <h1>WebSocketテスト</h1>
+        <div id="log">
+        </div>
+        <input id="msg" type="text"/>
+        <button id="send">送信</button>
     </body>
 </html>
