--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,33 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <title>WebSocketテスト</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script type="text/javascript">
-            var socket;
-            $(document).ready(function(){
-                var host="ws://localhost:8080/idraw/endpoint";
-                socket = new WebSocket(host);
-                
-                socket.onmessage = function(message){
-                    $('#log').append(message.data + "<br/>");
-                }
-
-                $('#send').click(function(){
-                    var text = $('#msg').val();
-                    socket.send(text);
-                    $('#msg').val('');
-                })
-    
-            });
-        </script>        
-    </head>
-    <body>
-        <h1>WebSocketテスト</h1>
-        <div id="log">
-        </div>
-        <input id="msg" type="text"/>
-        <button id="send">送信</button>
-    </body>
+<head>
+<meta charset="utf-8"> 
+<title>Canvas</title>
+<style>
+body {
+    margin: 20px;
+}
+canvas {
+    top: 20px;
+    left: 20px;
+    border: 5px solid #ccc;
+}
+#button {
+    position: relative;
+    top: -55px;
+    left: 345px;
+}
+#save {
+    font-size: 120%;
+    width: 80px;
+    height: 50px;
+}
+#clear {
+    font-size: 120%;
+    width: 80px;
+    height: 50px;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+li {
+    cursor:pointer;
+    cursor:hand;
+    display:inline-block;
+    border: 1px solid #000;
+    width: 50px;
+    height: 50px;
+}
+</style>
+</head>
+<body>
+<canvas width="500" height="400"></canvas>
+<ul>
+<li style="background-color:#000"></li>
+<li style="background-color:#f00"></li>
+<li style="background-color:#0f0"></li>
+<li style="background-color:#00f"></li>
+<li style="background-color:#ff0"></li>
+<li style="background-color:#fff"></li>
+</ul>
+<div id="button">
+<input type="button" id="save" value="保存" />
+<input type="button" id="clear" value="消去" />
+</div>
+ 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(function() {
+    var offset = 5;
+    var fromX;
+    var fromY;
+    var drawFlag = false;
+    var context = $("canvas").get(0).getContext('2d');
+    var host="ws://localhost:8080/idraw/endpoint";
+    socket = new WebSocket(host);
+ 
+    socket.onmessage = function(msg){
+        var json = $.parseJSON(msg.data);
+    	console.log(json);
+        context.strokeStyle = json.color;
+        context.lineWidth = 2;
+        context.beginPath();
+        context.moveTo(json.fx, json.fy);
+        context.lineTo(json.tx, json.ty);
+        context.stroke();
+        context.closePath(); 
+    }
+    /*
+    socket.on('clear user', function () {
+        context.clearRect(0, 0, $('canvas').width(), $('canvas').height());
+    });*/
+ 
+    $('canvas').mousedown(function(e) {
+        drawFlag = true;
+        fromX = e.pageX - $(this).offset().left - offset;
+        fromY = e.pageY - $(this).offset().top - offset;
+        return false;  // for chrome
+    });
+ 
+    $('canvas').mousemove(function(e) {
+        if (drawFlag) {
+            draw(e);
+        }
+    });
+ 
+    $('canvas').on('mouseup', function() {
+        drawFlag = false;
+    });
+ 
+    $('canvas').on('mouseleave', function() {
+        drawFlag = false;
+    });
+ 
+    $('li').click(function() {
+        context.strokeStyle = $(this).css('background-color');
+    });
+ 
+    $('#clear').click(function(e) {
+        //socket.emit('clear send');
+        e.preventDefault();
+        context.clearRect(0, 0, $('canvas').width(), $('canvas').height());
+    });
+ 
+    function draw(e) {
+        var toX = e.pageX - $('canvas').offset().left - offset;
+        var toY = e.pageY - $('canvas').offset().top - offset;
+        context.lineWidth = 2;
+        context.beginPath();
+        context.moveTo(fromX, fromY);
+        context.lineTo(toX, toY);
+        context.stroke();
+        context.closePath();
+ 
+        // サーバへメッセージ送信
+        //socket.emit('server send', { fx:fromX, fy:fromY, tx:toX, ty:toY, color:context.strokeStyle });
+        socket.send(JSON.stringify({ cmd:"pen", fx:fromX, fy:fromY, tx:toX, ty:toY, color:context.strokeStyle }));
+        fromX = toX;
+        fromY = toY;
+    }
+ 
+    $('#save').click(function() {
+        var d = $("canvas")[0].toDataURL("image/png");
+        d = d.replace("image/png", "image/octet-stream");
+        window.open(d,"save");
+    });
+});
+</script>
+</body>
 </html>
