[add] idraw.cssを作成、htmlと分離

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,48 +3,7 @@
 <head>
 <meta charset="utf-8"> 
 <title>Canvas</title>
-<style>
-body {
-    margin: 0;
-    background-color:#000;
-}
-::-webkit-scrollbar {
-  display: none;
-}
-canvas {
-    top: 20px;
-    left: 20px;
-    background-color:#fff;
-}
-#button {
-    position: relative;
-    top: -55px;
-    left: 345px;
-}
-#save {
-    font-size: 120%;
-    width: 80px;
-    height: 50px;
-}
-#clear {
-    font-size: 120%;
-    width: 80px;
-    height: 50px;
-}
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-li {
-    cursor:pointer;
-    cursor:hand;
-    display:inline-block;
-    border: 1px solid #fff;
-    width: 50px;
-    height: 50px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="./idraw.css">
 </head>
 <body>
 <canvas width="800" height="600" id="canvas"></canvas>
