--- a/WebContent/mock/login.html
+++ b/WebContent/mock/login.html
@@ -5,6 +5,8 @@
 	<title>Login</title>
 	<link rel="stylesheet" type="text/css" href="../idraw.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<script src="../jquery.cookie-1.4.1.min.js"></script>
+	<script src="../cryptico.min.js"></script>
 	<script src="../idraw.js"></script>
 </head>
 <body>
@@ -12,18 +14,24 @@
 <h1 id="title"><span id="title_secondary">We</span>Draw</h1>
 <h1 id="infoTitle" style="position:absolute;margin-left: 340px;margin-top: 240px;font-size: 24px;display:none;">ログイン</h1>
 <h1 id="subInfo" style="position:absolute;margin-left: 280px;margin-top: 280px;font-size: 20px;display:none;">ログインIDを入力</h1>
-
+<div id="chat_window"></div>
 <canvas width="800" height="600" id="canvas" style="position: absolute;"></canvas>
 <img id="brush" src="../images/brush.png" style="height:130px;width:0px;position:absolute">
-<input id="loginButton" type="submit" value="ログイン" class="button" style="position:absolute;margin-left: 280px;margin-top: 350px;">
-<input id="signUpButton" type="submit" value="サインアップ" class="button" style="position:absolute;margin-left: 440px;margin-top: 350px;">
-<input id="idField" type="text" value="" class="button" style="position:absolute;margin-left: 280px;margin-top: 330px;display:none;">
-<input id="idSubmitButton" type="submit" value="Submit" class="button" style="position:absolute;margin-left: 440px;margin-top: 330px;display:none;">
-<input id="pwField" type="text" value="" class="button" style="position:absolute;margin-left: 280px;margin-top: 330px;display:none;">
-<input id="pwSubmitButton" type="submit" value="Submit" class="button" style="position:absolute;margin-left: 440px;margin-top: 330px;display:none;">
+<input id="loginButton" type="submit" value="ログイン" class="button">
+<input id="signUpButton" type="submit" value="サインアップ" class="button">
+<input id="idField" type="text" value="" class="button text_field" style="position:absolute;margin-left: 280px;margin-top: 330px;display:none;">
+<input id="idSubmitButton" type="submit" value="送信" class="button" style="position:absolute;margin-left: 440px;margin-top: 330px;display:none;">
+<input id="pwField" type="text" value="" class="button text_field" style="position:absolute;margin-left: 280px;margin-top: 330px;display:none;">
+<input id="pwSubmitButton" type="submit" value="送信" class="button" style="position:absolute;margin-left: 440px;margin-top: 330px;display:none;">
 </div>
-<div id="panel_console">
-
+<div id="panel_console" class="Paper">
+<div id="panel_theme"><span id="theme_text">テーマ：</span>
+<select id="select_theme">
+	<option>Paper</option>
+	<option>Modern</option>
+	<option>Dark</option>
+</select>
+</div>
 <table id="palette">
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 90%)"></td>
@@ -57,7 +65,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 70%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 70%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 70%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 70%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 70%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 70%)"></td>
@@ -72,7 +80,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 60%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 60%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 60%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 60%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 60%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 60%)"></td>
@@ -87,7 +95,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 50%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 50%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 50%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 50%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 50%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 50%)"></td>
@@ -102,7 +110,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 40%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 40%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 40%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 40%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 40%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 40%)"></td>
@@ -117,7 +125,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 30%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 30%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 30%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 30%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 30%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 30%)"></td>
@@ -132,7 +140,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 20%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 20%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 20%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 20%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 20%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 20%)"></td>
@@ -147,7 +155,7 @@
   </tr>
   <tr>
     <td class="palette_cell" style="background-color:hsl(0, 100%, 10%)"></td>
-    <td class="palette_cell" style="background-color:hsl(30, 100%, 10%)"></td> 
+    <td class="palette_cell" style="background-color:hsl(30, 100%, 10%)"></td>
     <td class="palette_cell" style="background-color:hsl(60, 100%, 10%)"></td>
     <td class="palette_cell" style="background-color:hsl(90, 100%, 10%)"></td>
     <td class="palette_cell" style="background-color:hsl(120, 100%, 10%)"></td>
@@ -160,14 +168,12 @@
     <td class="palette_cell" style="background-color:hsl(330, 100%, 10%)"></td>
     <td class="palette_cell" style="background-color:hsl(330, 0%, 0%)"></td>
   </tr>
-</table>	
+</table>
 
     <div id="panel_button">
-    	<input type="button" id="tool_pen" />
-    	<input type="button" id="tool_text" />
-    	<input type="button" id="tool_image" />
-		<input type="button" id="tool_save" />
-		<input type="button" id="tool_clear"/>
+    	<input type="button" id="tool_pen" class="tool_button Paper" />
+		<input type="button" id="tool_clear" class="tool_button Paper" />
+		<input type="button" id="tool_eraser" class="tool_button Paper" />
 	</div>
 </div>
 <div id="panel_mask">
@@ -175,10 +181,26 @@
 </body>
 <script>
 $(function(){
-	socket = {send:function(){}}
+	socket = {
+		send: function(msg) {
+	        var json = $.parseJSON(msg.data);
+	        //JSON.stringify(json);
+		}
+	}
 	sessionId = "";
-	idraw.eventDefine();
+	idraw.loadSessionId();
+	idraw.eventDefine(true);
 	var ani_speed = 500;
+	
+    commands.push(function (json){
+    	switch (json.cmd){
+    	case "pubkey":
+			if ($("#idField").val() == json.id) {
+	    		pubkey = json.key;
+			}
+    		break;
+    	}
+    });
 	$("#loginButton").click(function() {
 		idNew = false;
 		$("#brush").animate({top: '300px',opacity: '1'},0);
@@ -186,23 +208,23 @@ $(function(){
 		$("#loginButton").animate({opacity: '0'},ani_speed);
 		$("#signUpButton").animate({opacity: '0'},ani_speed);
 		$("#brush").animate({opacity: '0'},ani_speed);
-		
+
 		$("#infoTitle").show(ani_speed);
 		$("#subInfo").show(ani_speed);
 		$("#idField").show(ani_speed);
 		$("#idSubmitButton").show(ani_speed);
 		$("#brush").hide(0);
 	});
-	
+
 	$("#signUpButton").click(function() {
 		idNew = true;
 		$("#title").animate({top: '-100px', opacity: '0.2'},ani_speed);
 		$("#loginButton").animate({opacity: '0'},ani_speed);
 		$("#signUpButton").animate({opacity: '0'},ani_speed);
 		$("#brush").animate({opacity: '0'},ani_speed);
-		
+
 		$("#infoTitle").text("サインアップ");
-		
+
 		$("#infoTitle").show(ani_speed);
 		$("#subInfo").show(ani_speed);
 		$("#idField").show(ani_speed);
@@ -217,7 +239,7 @@ $(function(){
 		// subinfoをしまい終わってから全部出す
 		$("#subInfo").animate({opacity: '0'},ani_speed, function() {
 			$("#subInfo").text("パスワードを入力");
-			
+
 			$("#subInfo").animate({opacity: '1'},ani_speed);
 			$("#pwField").show(ani_speed);
 			$("#pwSubmitButton").show(ani_speed);
