[fix] JQueryがうまく取れなかったので修正

--- a/WebContent/mock/index.html
+++ b/WebContent/mock/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Canvas</title>
 <link rel="stylesheet" type="text/css" href="../idraw.css">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="../jquery.cookie-1.4.1.min.js"></script>
 <script src="../idraw.js"></script>
 <script src="../index_websocket_commands.js"></script>
